# nautograf

./: .clang-format  .commitlintrc.mjs  .gitignore  .gitmodules  AppxManifest.xml.in  CMakeLists.txt  CMakePresets.json  README.md  chocolatey.config  create_icon.cmake  create_icon.sh  deploy-qt-windows.cmake.in  icon.rc.in  privacy_policy.md  vcpkg.json  version.h.in  version.txt.in
.github/workflows/: ci.yml  windows.yaml
cmake/: GetVersionFromGit.cmake  InstallLicense.cmake
qml/: About.qml  ChartSelector.qml  FolderDialog.qml  OverlayText.qml  StatusBar.qml  TileInfo.qml  Viewer.qml  ViewerMenu.qml  ViewerMenuItem.qml  XdgFileDialogWrapper.qml  about.md  main.qml  qml.qrc  qmldir
snap/: snapcraft.yaml
snap/gui/: nautograf.desktop
src/: chartmanager.cpp  chartmanager.h  chartmodel.cpp  chartmodel.h  chartsymbols.cpp  chartsymbols.h  cryptreader.cpp  cryptreader.h  licenses.cpp  licenses.h  main.cpp  maptile.cpp  maptile.h  maptilemodel.cpp  maptilemodel.h  mercatorwrapper.h  tilefactorywrapper.cpp  tilefactorywrapper.h  tileinfobackend.cpp  tileinfobackend.h  usersettings.cpp  usersettings.h
src/scene/: CMakeLists.txt  annotater.cpp  annotater.h  annotation.frag  annotation.vert  annotationmaterial.cpp  annotationmaterial.h  annotationshader.cpp  annotationshader.h  fontimage.cpp  fontimage.h  geometrynode.cpp  geometrynode.h  materialcreator.cpp  materialcreator.h  rootnode.cpp  rootnode.h  scene.cpp  scene.h  symbolimage.cpp  symbolimage.h  tessellator.cpp  tessellator.h  tiledata.h  tilefactorywrapper.cpp  tilenode.cpp  tilenode.h  triangulator.cpp
src/scene/annotation/: annotation.frag  annotation.vert  annotationnode.cpp  annotationnode.h  annotationshader.h
src/scene/annotations/: annotater.cpp  annotater.h  annotation.frag  annotation.vert  annotationmaterial.h  annotationnode.cpp  annotationnode.h  annotationshader.cpp  annotationshader.h  fontimage.cpp  symbolimage.cpp  symbolimage.h  zoomsweeper.cpp  zoomsweeper.h
src/scene/include/scene/: fontimage.h  scene.h  tilefactorywrapper.h
src/scene/include/scene/annotations/: fontimage.h  types.h
src/scene/line/: line.frag  line.vert  linematerial.cpp  linematerial.h  linenode.cpp  linenode.h  lineshader.cpp  lineshader.h
src/scene/polygon/: polygon.frag  polygon.vert  polygonmaterial.cpp  polygonmaterial.h  polygonnode.cpp  polygonnode.h  polygonshader.cpp  polygonshader.h
src/scene/test/: CMakeLists.txt  fontimage_test.cpp
src/tilefactory/: CMakeLists.txt  catalog.cpp  chart.cpp  chartclipper.cpp  chartdata.capnp  coverageratio.cpp  coverageratio.h  filehelper.cpp  filehelper.h  georect.cpp  mercator.cpp  oesenctilesource.cpp  pos.cpp  tilefactory.cpp  triangulator.cpp
src/tilefactory/include/tilefactory/: catalog.h  chart.h  chartclipper.h  georect.h  itilesource.h  mercator.h  oesenctilesource.h  pos.h  tilefactory.h  triangulator.h
src/tilefactory/rust/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs
symbols/: symbols.qrc
