[package]
name = "tilefactory_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
cxx = "1.0"
geo = "0.28.0"

[build-dependencies]
cxx-build = "1.0"
